--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: Turing158's Home
 subtitle:
 description:
-author: Turing158's Home
+author: Turing158
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
