--- a/_config.yml
+++ b/_config.yml
@@ -213,8 +213,10 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
+social:
+ GitHub: https://github.com/Turing158
+ Gitee: https://gitee.com/turing-ice
+ CSDN: https://blog.csdn.net/weixin_46396315
 
 
 # Social Links Icons
