--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ keywords: "Jekyll, NexT"
 rss:
 
 # Specify the date when the site was setup
-since: © 2022 - 2024
+since: 2022 - 2024
 
 # icon between year and author @Footer
 authoricon: heart
