--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ index_with_subtitle: false
 menu:
   home: /
   categories: /categories/
-#  archives: /archives/
+  archives: /archives/
   tags: /tags/
   about: /about/
   #sitemap: /sitemap.xml
@@ -375,7 +375,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 75c02ca41fa838f120587aa681fac527
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -556,7 +556,7 @@ busuanzi_count:
 
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
-baidu_push: false
+baidu_push: true
 
 # Google Calendar
 # Share your recent schedule to others via calendar page
