--- a/_config.yml
+++ b/_config.yml
@@ -382,8 +382,8 @@ baidu_analytics: 75c02ca41fa838f120587aa681fac527
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: turing158s-home
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
