--- a/_config.yml
+++ b/_config.yml
@@ -151,8 +151,8 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-#scheme: Muse
-scheme: Mist
+scheme: Muse
+#scheme: Mist
 #scheme: Pisces
 
 
@@ -283,11 +283,11 @@ sidebar:
 
 
 # Blog rolls
-#links_title: Links
+links_title: Links
 #links_layout: block
-#links_layout: inline
-#links:
-#  Title: TuringICE
+links_layout: inline
+links:
+  Title: TuringICE
 
 
 # ---------------------------------------------------------------
