--- a/_config.yml
+++ b/_config.yml
@@ -421,7 +421,7 @@ wildfire:
 # </wildfire>
 
 # Hypercomments
-hypercomments_id: 6e1531fe-6a56-4fdc-b265-c2d329f31599
+#hypercomments_id: 6e1531fe-6a56-4fdc-b265-c2d329f31599
 
 # Gentie productKey
 #gentie_productKey:
@@ -442,12 +442,12 @@ changyan:
 
 # Support for gitalk comments system.
 gitalk:
-  enable: false
-  clientID: # 54730ddf7b9420460c03
-  clientSecret: # c05684701b25ff1c19ea0c01ce4d80c125e0707d
-  repo: # colingpt.github.io
-  owner: # colingpt
-  admin: # colingpt
+  enable: true
+  clientID: 0275b8f48f2a7e0ac1b0
+  clientSecret: 173a61730904837485e645de785bc24d0379d936
+  repo: Turing158.github.io
+  owner: Turing158
+  admin: Turing158
 
 # Baidu Share
 # Available value:
