--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: Turing158's Home
-subtitle: ！🎉各位🧆<p color="darkred">元宵节</p>🧆快乐🎉！
+subtitle: ！🎉各位🧆<span style="color:darkred">元宵节</span>🧆快乐🎉！
 description:
 author: Turing158
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
