--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: Turing158's Home
-subtitle: ！🎉各位🧆<span style="color:darkred">元宵节</span>🧆快乐🎉！
+subtitle: ！🎉各位🧆<span style="color:darkred;font-weight:bold">元宵节</span>🧆快乐🎉！
 description:
 author: Turing158
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
@@ -87,7 +87,7 @@ keywords: "Turing158,TuringICE"
 rss:
 
 # Specify the date when the site was setup
-since: 2024
+since: 2022
 
 # icon between year and author @Footer
 authoricon: heart
