--- a/_config.yml
+++ b/_config.yml
@@ -318,14 +318,14 @@ auto_excerpt:
 post_meta:
   item_text: true
   created_at: true
-  updated_at: true
+  updated_at: false
   categories: true
 
 # Post wordcount display settings
 post_wordcount:
   item_text: true
   wordcount: true
-  min2read: true
+  min2read: false
   separated_meta: true
 
 # Wechat Subscriber
