--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # Site
 title: Turing158's Home
-subtitle: ！🎉各位🧆<span style="color:darkred;font-weight:bold">元宵节</span>🧆快乐🎉！
-description:
+subtitle: ！😟<span style="font-weight:bold;color:brown;">开学</span>了，各位😟！
+description: 练习两年半的大二在读大学生
 author: Turing158
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
